gorm 统一数据返回
